Improve test coverage and fix linter warnings