@@ -1,22 +1,18 @@
 package com.huawei.monitoring.service;
 
-import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -27,6 +23,7 @@ import com.huawei.monitoring.model.MetricType;
 import com.huawei.monitoring.repository.MetricDataRepository;
 
 @ExtendWith(MockitoExtension.class)
+@SuppressWarnings("null")
 class MonitoringServiceTest {
 
     @Mock
@@ -58,55 +55,36 @@ class MonitoringServiceTest {
     }
 
     @Test
-    @SuppressWarnings("null")
-    void testRecordMetric_Success() {
-        // Arrange
-        MetricData metric = requireNonNull(testMetric);
+    void recordMetric_savesAndReturnsMetric() {
+        when(repository.save(any(MetricData.class))).thenReturn(testMetric);
 
-        when(repository.save(any(MetricData.class)))
-                .thenReturn(metric);
-
-        // Act
         MetricDataDTO result = service.recordMetric(testDTO);
 
-        // Assert result
         assertNotNull(result);
         assertEquals(1L, result.getStationId());
         assertEquals(MetricType.CPU_USAGE, result.getMetricType());
-
-        // Capture argument
-        ArgumentCaptor<MetricData> metricCaptor = ArgumentCaptor.forClass(MetricData.class);
-
-        verify(repository, times(1)).save(metricCaptor.capture());
-
-        MetricData captured = metricCaptor.getValue();
-
-        assertEquals(1L, captured.getStationId());
-        assertEquals(MetricType.CPU_USAGE, captured.getMetricType());
+        verify(repository).save(any(MetricData.class));
     }
 
     @Test
-    void testGetMetricsByStation() {
+    void getMetricsByStation_returnsAllForStation() {
         MetricData metric2 = new MetricData();
         metric2.setId("2");
         metric2.setStationId(1L);
         metric2.setMetricType(MetricType.MEMORY_USAGE);
         metric2.setValue(60.0);
 
-        final MetricData metric = requireNonNull(testMetric);
-        when(repository.findByStationId(1L)).thenReturn(Arrays.asList(metric, metric2));
+        when(repository.findByStationId(1L)).thenReturn(List.of(testMetric, metric2));
 
         List<MetricDataDTO> result = service.getMetricsByStation(1L);
 
         assertEquals(2, result.size());
-        verify(repository, times(1)).findByStationId(1L);
     }
 
     @Test
-    void testGetMetricsByStationAndType() {
-        final MetricData metric = requireNonNull(testMetric);
+    void getMetricsByStationAndType_filtersCorrectly() {
         when(repository.findByStationIdAndMetricType(1L, MetricType.CPU_USAGE))
-                .thenReturn(Arrays.asList(metric));
+                .thenReturn(List.of(testMetric));
 
         List<MetricDataDTO> result = service.getMetricsByStationAndType(1L, MetricType.CPU_USAGE);
 
@@ -115,10 +93,9 @@ class MonitoringServiceTest {
     }
 
     @Test
-    void testGetMetricsAboveThreshold() {
-        final MetricData metric = requireNonNull(testMetric);
+    void getMetricsAboveThreshold_returnsOnlyAbove() {
         when(repository.findMetricsAboveThreshold(MetricType.CPU_USAGE, 70.0))
-                .thenReturn(Arrays.asList(metric));
+                .thenReturn(List.of(testMetric));
 
         List<MetricDataDTO> result = service.getMetricsAboveThreshold(MetricType.CPU_USAGE, 70.0);
 
